--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0",
+    "react-test-renderer": "^16.2.0",
     "reset-css": "^2.2.1"
   },
   "scripts": {
@@ -16,11 +19,15 @@
     "galen-test": "galen test galen-tests/*.test -DwebsiteUrl=http://localhost:3000"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/enzyme": "^3.1.6",
     "@types/jest": "^22.0.0",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
     "@types/react-dom": "^16.0.3",
     "chromedriver": "^2.34.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "galenframework": "^2.3.6",
     "geckodriver": "^1.10.0"
   }
