--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/storybook__addon-actions": "^3.0.1",
     "classnames": "^2.2.5",
     "raf": "^3.4.0",
     "react": "^16.2.0",
@@ -16,19 +17,24 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "galen-test": "galen test galen-tests/*.test -DwebsiteUrl=http://localhost:3000"
   },
   "devDependencies": {
+    "@storybook/react": "^3.3.3",
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^3.1.6",
     "@types/jest": "^22.0.0",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
     "@types/react-dom": "^16.0.3",
+    "@types/storybook__react": "^3.0.6",
     "chromedriver": "^2.34.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "galenframework": "^2.3.6",
-    "geckodriver": "^1.10.0"
+    "geckodriver": "^1.10.0",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2"
   }
 }
