--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-dates": "^16.0.1",
     "@types/storybook__addon-actions": "^3.0.1",
     "classnames": "^2.2.5",
+    "moment": "^2.20.1",
     "raf": "^3.4.0",
     "react": "^16.2.0",
+    "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0",
     "react-test-renderer": "^16.2.0",
