--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.20",
+    "@types/react-router-dom": "^4.2.3",
     "@types/storybook__react": "^3.0.6",
     "chromedriver": "^2.34.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "galenframework": "^2.3.6",
     "geckodriver": "^1.10.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2"
   }
