--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.2.0",
     "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts-ts": "2.8.0",
     "react-test-renderer": "^16.2.0",
+    "redux": "^3.7.2",
     "reset-css": "^2.2.1"
   },
   "scripts": {
@@ -31,6 +33,7 @@
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
     "@types/storybook__react": "^3.0.6",
