--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chromedriver": "^2.34.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.0",
     "galenframework": "^2.3.6",
     "geckodriver": "^1.10.0",
     "react-router": "^4.2.0",
