--- a/tsconfig.storybook.json
+++ b/tsconfig.storybook.json
@@ -22,6 +22,7 @@
     "acceptance-tests",
     "webpack",
     "jest",
+    "src/components/connected",
     "src/setupTests.ts",
     "src/**/*.test.tsx"
   ]
