--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "express": "^4.15.4",
     "graphql": "^0.12.3",
     "graphql-date": "^1.0.3",
+    "graphql-tag": "^2.6.1",
     "graphql-tools": "^1.2.1",
+    "react-apollo": "^2.0.4",
     "sequelize": "^4.7.5",
     "sqlite3": "^3.1.9"
   },
