--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-dates": "^16.0.1",
-    "@types/storybook__addon-actions": "^3.0.1",
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link-http": "^1.3.2",
     "classnames": "^2.2.5",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "moment": "^2.20.1",
     "raf": "^3.4.0",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.8.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
-    "reset-css": "^2.2.1"
+    "reset-css": "^2.2.1",
+    "tslint-react": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -29,13 +34,17 @@
     "@storybook/react": "^3.3.3",
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^3.1.6",
+    "@types/graphql": "^0.11.8",
     "@types/jest": "^22.0.0",
+    "@types/lodash.flowright": "^3.5.3",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
+    "@types/react-dates": "^16.0.1",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
+    "@types/storybook__addon-actions": "^3.0.1",
     "@types/storybook__react": "^3.0.6",
     "chromedriver": "^2.34.1",
     "enzyme": "^3.3.0",
