--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "graphql-date": "^1.0.3",
     "graphql-tag": "^2.6.1",
     "graphql-tools": "^1.2.1",
+    "moment": "^2.20.1",
     "react-apollo": "^2.0.4",
     "sequelize": "^4.7.5",
     "sqlite3": "^3.1.9"
