--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -17,6 +16,10 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true
   },
+  "incluide": [
+    "src",
+    "stories"
+  ],
   "exclude": [
     "node_modules",
     "build",
